add errors
modified db schema

modified api dto

modified transfer unit test

modified gapi
